# datastar-gpt

./: .gitignore  README.md  app.py  data.json  hypercorn.conf  pyproject.toml
_old/: app copy.py
static/css/: gold.css  main.css
static/js/: main.js
templates/: index.html
